@@ -15,8 +15,8 @@
  */
 package com.android.tradefed.testtype;
 
+import com.android.tradefed.build.BuildRetrievalError;
 import com.android.tradefed.build.IBuildInfo;
-import com.android.tradefed.build.IDeviceBuildInfo;
 import com.android.tradefed.config.ConfigurationException;
 import com.android.tradefed.config.Option;
 import com.android.tradefed.config.Option.Importance;
@@ -25,7 +25,7 @@ import com.android.tradefed.config.OptionCopier;
 import com.android.tradefed.config.OptionSetter;
 import com.android.tradefed.device.DeviceNotAvailableException;
 import com.android.tradefed.device.ITestDevice;
-import com.android.tradefed.invoker.IInvocationContext;
+import com.android.tradefed.invoker.TestInformation;
 import com.android.tradefed.log.LogUtil.CLog;
 import com.android.tradefed.metrics.proto.MetricMeasurement.Metric;
 import com.android.tradefed.result.ITestInvocationListener;
@@ -37,7 +37,6 @@ import com.android.tradefed.testtype.junit4.JUnit4ResultForwarder;
 import com.android.tradefed.util.FileUtil;
 import com.android.tradefed.util.JUnit4TestFilter;
 import com.android.tradefed.util.StreamUtil;
-import com.android.tradefed.util.SystemUtil.EnvVariable;
 import com.android.tradefed.util.TestFilterHelper;
 
 import com.google.common.annotations.VisibleForTesting;
@@ -61,6 +60,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.AnnotatedElement;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.net.URL;
@@ -75,10 +75,10 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
+import java.util.regex.Pattern;
 
 /**
  * A test runner for JUnit host based tests. If the test to be run implements {@link IDeviceTest}
@@ -94,9 +94,7 @@ public class HostTest
                 IBuildReceiver,
                 IAbiReceiver,
                 IShardableTest,
-                IRuntimeHintProvider,
-                IMultiDeviceTest,
-                IInvocationContextReceiver {
+                IRuntimeHintProvider {
 
     @Option(name = "class", description = "The JUnit test classes to run, in the format "
             + "<package>.<class>. eg. \"com.android.foo.Bar\". This field can be repeated.",
@@ -121,7 +119,7 @@ public class HostTest
                     + "separated by colon \":\"; for example, if class under test supports "
                     + "\"--iteration 1\" from a command line, it should be passed in as"
                     + " \"--set-option iteration:1\" or \"--set-option iteration:key=value\" for "
-                    + "passing options to map; escaping of \":\" \"=\" is currently not supported."
+                    + "passing options to map; escaping of \"=\" is currently not supported."
                     + "A particular class can be targetted by specifying it. "
                     + "\" --set-option <fully qualified class>:<option name>:<option value>\"";
 
@@ -169,8 +167,7 @@ public class HostTest
     private ITestDevice mDevice;
     private IBuildInfo mBuildInfo;
     private IAbi mAbi;
-    private Map<ITestDevice, IBuildInfo> mDeviceInfos;
-    private IInvocationContext mContext;
+    private TestInformation mTestInfo;
     private TestFilterHelper mFilterHelper;
     private boolean mSkipTestClassCheck = false;
 
@@ -182,7 +179,6 @@ public class HostTest
 
     private static final String EXCLUDE_NO_TEST_FAILURE = "org.junit.runner.manipulation.Filter";
     private static final String TEST_FULL_NAME_FORMAT = "%s#%s";
-    private static final String ROOT_DIR = "ROOT_DIR";
 
     /** Track the downloaded files. */
     private List<File> mDownloadedFiles = new ArrayList<>();
@@ -190,6 +186,10 @@ public class HostTest
     public HostTest() {
         mFilterHelper = new TestFilterHelper(new ArrayList<String>(), new ArrayList<String>(),
                 mIncludeAnnotations, mExcludeAnnotations);
+    }
+
+    public void setTestInformation(TestInformation testInfo) {
+        mTestInfo = testInfo;
     }
 
     /**
@@ -241,16 +241,6 @@ public class HostTest
      */
     protected IBuildInfo getBuild() {
         return mBuildInfo;
-    }
-
-    @Override
-    public void setDeviceInfos(Map<ITestDevice, IBuildInfo> deviceInfos) {
-        mDeviceInfos = deviceInfos;
-    }
-
-    @Override
-    public void setInvocationContext(IInvocationContext invocationContext) {
-        mContext = invocationContext;
     }
 
     /**
@@ -473,11 +463,11 @@ public class HostTest
         if (testObj instanceof IAbiReceiver) {
             ((IAbiReceiver)testObj).setAbi(mAbi);
         }
-        if (testObj instanceof IMultiDeviceTest) {
-            ((IMultiDeviceTest) testObj).setDeviceInfos(mDeviceInfos);
-        }
         if (testObj instanceof IInvocationContextReceiver) {
-            ((IInvocationContextReceiver) testObj).setInvocationContext(mContext);
+            ((IInvocationContextReceiver) testObj).setInvocationContext(mTestInfo.getContext());
+        }
+        if (testObj instanceof ITestInformationReceiver) {
+            ((ITestInformationReceiver) testObj).setTestInformation(mTestInfo);
         }
         // managed runner should have the same set-option to pass option too.
         if (testObj instanceof ISetOptionReceiver) {
@@ -492,11 +482,11 @@ public class HostTest
         }
     }
 
-    /**
-     * {@inheritDoc}
-     */
+    /** {@inheritDoc} */
     @Override
-    public void run(ITestInvocationListener listener) throws DeviceNotAvailableException {
+    public void run(TestInformation testInfo, ITestInvocationListener listener)
+            throws DeviceNotAvailableException {
+        mTestInfo = testInfo;
         // Ensure filters are set in the helper
         mFilterHelper.addAllIncludeAnnotation(mIncludeAnnotations);
         mFilterHelper.addAllExcludeAnnotation(mExcludeAnnotations);
@@ -521,7 +511,7 @@ public class HostTest
 
         // Add a pretty logger to the events to mark clearly start/end of test cases.
         if (mEnableHostDeviceLogs) {
-            PrettyTestEventLogger logger = new PrettyTestEventLogger(mContext.getDevices());
+            PrettyTestEventLogger logger = new PrettyTestEventLogger(mTestInfo.getDevices());
             listener = new ResultForwarder(logger, listener);
         }
         if (mTestMethods != null) {
@@ -610,7 +600,7 @@ public class HostTest
                                 "%s does not implement ITestCollector", test.getClass()));
             }
         }
-        test.run(listener);
+        test.run(mTestInfo, listener);
     }
 
     /** Returns True if some tests were executed, false otherwise. */
@@ -872,7 +862,7 @@ public class HostTest
         for (String jarName : mJars) {
             JarFile jarFile = null;
             try {
-                File file = getJarFile(jarName, getBuild());
+                File file = getJarFile(jarName, mTestInfo);
                 jarFile = new JarFile(file);
                 Enumeration<JarEntry> e = jarFile.entries();
                 URL[] urls = {new URL(String.format("jar:file:%s!/", file.getAbsolutePath()))};
@@ -956,7 +946,7 @@ public class HostTest
     private Object loadObject(Class<?> classObj, boolean setInfo) throws IllegalArgumentException {
         final String className = classObj.getName();
         try {
-            Object testObj = classObj.newInstance();
+            Object testObj = classObj.getDeclaredConstructor().newInstance();
             // set options
             setOptionToLoadedObject(testObj, mKeyValueOptions);
             // Set the test information if needed.
@@ -970,6 +960,9 @@ public class HostTest
         } catch (IllegalAccessException e) {
             throw new IllegalArgumentException(String.format("Could not load Test class %s",
                     className), e);
+        } catch (InvocationTargetException | NoSuchMethodException e) {
+            throw new IllegalArgumentException(
+                    String.format("Could not load Test class %s", className), e);
         }
     }
 
@@ -981,31 +974,56 @@ public class HostTest
      */
     public static void setOptionToLoadedObject(Object testObj, List<String> keyValueOptions) {
         if (!keyValueOptions.isEmpty()) {
+            OptionSetter setter;
             try {
-                OptionSetter setter = new OptionSetter(testObj);
-                for (String item : keyValueOptions) {
-                    String[] fields = item.split(":");
-                    if (fields.length == 3) {
-                        String target = fields[0];
-                        if (testObj.getClass().getName().equals(target)) {
-                            injectOption(setter, item, fields[1], fields[2]);
-                        } else {
-                            // TODO: We should track that all targeted option end up assigned
-                            // eventually.
-                            CLog.d(
-                                    "Targeted option %s is not applicable to %s",
-                                    item, testObj.getClass().getName());
-                        }
-                    } else if (fields.length == 2) {
-                        injectOption(setter, item, fields[0], fields[1]);
-                    } else {
-                        throw new RuntimeException(
-                                String.format("invalid option spec \"%s\"", item));
-                    }
-                }
+                setter = new OptionSetter(testObj);
             } catch (ConfigurationException ce) {
                 CLog.e(ce);
-                throw new RuntimeException("error passing options down to test class", ce);
+                throw new RuntimeException("error creating option setter", ce);
+            }
+            for (String item : keyValueOptions) {
+                // Support escaping ':' using lookbehind in the regex. The regex engine will
+                // step backwards to check for the escape char when it matches the delim char.
+                // If it doesn't find the escape char, then a match is registered.
+                String delim = ":";
+                String esc = "\\";
+                String regex = "(?<!" + Pattern.quote(esc) + ")" + Pattern.quote(delim);
+                String[] fields = item.split(regex);
+                String key, value;
+                if (fields.length == 3) {
+                    String target = fields[0];
+                    if (testObj.getClass().getName().equals(target)) {
+                        key = fields[1];
+                        value =
+                                fields[2].replaceAll(
+                                        Pattern.quote(esc) + Pattern.quote(delim), delim);
+                    } else {
+                        // TODO: We should track that all targeted option end up assigned
+                        // eventually.
+                        CLog.d(
+                                "Targeted option %s is not applicable to %s",
+                                item, testObj.getClass().getName());
+                        continue;
+                    }
+                } else if (fields.length == 2) {
+                    key = fields[0];
+                    value = fields[1].replaceAll(Pattern.quote(esc) + Pattern.quote(delim), delim);
+                } else {
+                    throw new RuntimeException(String.format("invalid option spec \"%s\"", item));
+                }
+                try {
+                    injectOption(setter, item, key, value);
+                } catch (ConfigurationException ce) {
+                    CLog.e(ce);
+                    throw new RuntimeException(
+                            "error passing option '"
+                                    + item
+                                    + "' down to test class as key="
+                                    + key
+                                    + " value="
+                                    + value,
+                            ce);
+                }
             }
         }
     }
@@ -1086,14 +1104,16 @@ public class HostTest
         }
     }
 
-    /**
-     * We split by individual by either test class or method.
-     */
+    /** We split by individual by either test class or method. */
     @Override
-    public Collection<IRemoteTest> split(int shardCount) {
+    public Collection<IRemoteTest> split(Integer shardCount, TestInformation testInfo) {
+        if (shardCount == null) {
+            return null;
+        }
         if (shardCount < 1) {
             throw new IllegalArgumentException("Must have at least 1 shard");
         }
+        mTestInfo = testInfo;
         List<IRemoteTest> listTests = new ArrayList<>();
         List<Class<?>> classes = getClasses();
         if (classes.isEmpty()) {
@@ -1177,8 +1197,11 @@ public class HostTest
     protected HostTest createHostTest(Class<?> classObj) {
         HostTest test;
         try {
-            test = this.getClass().newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            test = this.getClass().getDeclaredConstructor().newInstance();
+        } catch (InstantiationException
+                | IllegalAccessException
+                | InvocationTargetException
+                | NoSuchMethodException e) {
             throw new RuntimeException(e);
         }
         OptionCopier.copyOptionsNoThrow(this, test);
@@ -1202,37 +1225,9 @@ public class HostTest
      * find our jar.
      */
     @VisibleForTesting
-    protected File getJarFile(String jarName, IBuildInfo buildInfo) throws FileNotFoundException {
-        File jarFile = null;
-        // Check env variable
-        String testcasesPath = System.getenv(EnvVariable.ANDROID_HOST_OUT_TESTCASES.toString());
-        if (testcasesPath != null) {
-            File testCasesFile = new File(testcasesPath);
-            jarFile = searchJarFile(testCasesFile, jarName);
-        }
-        if (jarFile != null) {
-            return jarFile;
-        }
-
-        // Check tests dir
-        if (buildInfo instanceof IDeviceBuildInfo) {
-            IDeviceBuildInfo deviceBuildInfo = (IDeviceBuildInfo) buildInfo;
-            File testDir = deviceBuildInfo.getTestsDir();
-            jarFile = searchJarFile(testDir, jarName);
-        }
-        if (jarFile != null) {
-            return jarFile;
-        }
-
-        // Check ROOT_DIR
-        if (buildInfo.getBuildAttributes().get(ROOT_DIR) != null) {
-            jarFile =
-                    searchJarFile(new File(buildInfo.getBuildAttributes().get(ROOT_DIR)), jarName);
-        }
-        if (jarFile != null) {
-            return jarFile;
-        }
-        throw new FileNotFoundException(String.format("Could not find jar: %s", jarName));
+    protected File getJarFile(String jarName, TestInformation testInfo)
+            throws FileNotFoundException {
+        return testInfo.getDependencyFile(jarName, /* target first*/ false);
     }
 
     @VisibleForTesting
@@ -1244,18 +1239,8 @@ public class HostTest
         try {
             OptionSetter setter = createOptionSetter(obj);
             return setter.validateRemoteFilePath();
-        } catch (ConfigurationException e) {
+        } catch (BuildRetrievalError | ConfigurationException e) {
             throw new RuntimeException(e);
         }
-    }
-
-    private File searchJarFile(File baseSearchFile, String jarName) {
-        if (baseSearchFile != null && baseSearchFile.isDirectory()) {
-            File jarFile = FileUtil.findFile(baseSearchFile, jarName);
-            if (jarFile != null && jarFile.isFile()) {
-                return jarFile;
-            }
-        }
-        return null;
     }
 }
